--- a/actions/versioner/package.json
+++ b/actions/versioner/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "versioner-action",
+  "name": "github-actions-versioner",
   "version": "1.0.0",
   "private": true,
   "main": "dist/index.js",
+  "type": "commonjs",
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
     "package": "ncc build --source-map",
@@ -10,14 +12,17 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.11.1",
+    "@octokit/rest": "^21.1.1",
+    "@types/js-yaml": "^4.0.9",
+    "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.14.0",
     "@vercel/ncc": "^0.38.1",
-    "typescript": "^5.3.3",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.12",
-    "ts-jest": "^29.1.2"
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
   }
 }
