Improve and simplify version manager workflow

--- a/.github/workflows/version-manager.yml
+++ b/.github/workflows/version-manager.yml
@@ -1,9 +1,8 @@
 name: Version Manager
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
   workflow_dispatch:
 
 jobs:
@@ -16,24 +15,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install dependencies
-        run: |
-          cd actions/versioner
-          npm ci
-
-      - name: Build action
-        run: |
-          cd actions/versioner
-          npm run build
-          npm run package
 
       - name: Update v1 tag
         run: |
