Add updated dist code with all packages included

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Package
+        run: npm run package
+
       - name: Run tests
         run: npm test
 
