--- a/actions/versioner/package.json
+++ b/actions/versioner/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^22.14.0",
+    "@types/semver": "^7.7.0",
     "@vercel/ncc": "^0.38.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
