Adapt code structure to GitHub marketplace by using the main directory to store our project here

--- a/.github/workflows/test-version-checking.yml
+++ b/.github/workflows/test-version-checking.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Test Version Checker
-        uses: ./actions/versioner
+        uses: ./
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           workflow_path: .github/workflows/test-cases
